src/tests/fail/stanza_iterator_borrow.stderr
error[E0502]: cannot borrow `stanza` as mutable because it is also borrowed as immutable
 --> src/tests/fail/stanza_iterator_borrow.rs:6:2
  |
5 |     let _a = stanza.children();
  |              ----------------- immutable borrow occurs here
6 |     stanza.get_first_child_mut();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
7 | }
  | - immutable borrow might be used here, when `_a` is dropped and runs the destructor for type `impl Iterator<Item = StanzaRef<'_>>`
